# lab13

./: LICENSE
workspace/projects/lab13/: .CMakeLists.txt.swp  CMakeLists.txt
workspace/projects/lab13/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
workspace/projects/lab13/_builds/_3rdParty/Hunter/: install-root-dir
workspace/projects/lab13/_builds/_3rdParty/Hunter/config-id/: config.cmake
workspace/projects/lab13/_builds/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
workspace/projects/lab13/sources/: pack.cpp  unpack.cpp
